--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -1,3 +1,21 @@
 server:
   port: 8002
 
+spring:
+  application:
+    name: springboot-hungnt
+  datasource:
+    url: jdbc:mysql://192.168.1.101:3306/shopdev?serverTimezone=UTC  # Thêm `serverTimezone` để tránh lỗi múi giờ
+    username: root
+    password: root
+    driver-class-name: com.mysql.cj.jdbc.Driver  # Cập nhật driver mới
+
+  jpa:
+    database: mysql
+    show-sql: true
+    hibernate:
+      ddl-auto: update
+    properties:
+      hibernate:
+        format_sql: true
+        use_sql_comments: true
