--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -19,3 +19,19 @@ spring:
       hibernate:
         format_sql: true
         use_sql_comments: true
+
+  mail:
+    port: 465
+    host: xxxx
+    password: aaaa
+    username: aaaa
+    default-encoding: UTF-8
+    properties:
+      mail:
+        smtp:
+          auth: true
+          starttls:
+            enable: true
+            required: true
+          ssl:
+            enable: true
